--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+lib_deps = adafruit/Adafruit BME680 Library@^1.1.1
+upload_port = COM12
