--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = adafruit/Adafruit BME680 Library@^1.1.1
 upload_port = COM12
+monitor_port = COM12
